--- a/templates/admin/dashboardbase.html
+++ b/templates/admin/dashboardbase.html
@@ -262,7 +262,7 @@
 <script src="{% static 'dashboard/assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js' %}"></script>
 <script src="{% static 'dashboard/assets/js/sidebarmenu.js' %}"></script>
 <script src="{% static 'dashboard/assets/js/app.min.js' %}"></script>
-<script src="{% static 'dashboard/assets/libs/apexcharts/dist/apexcharts.min.js' %}"></script>
+<script src="{% static 'dashboard/assets/libs/apexcharts/dist/apexcharts.js' %}"></script>
 <script src="{% static 'dashboard/assets/libs/simplebar/dist/simplebar.js' %}"></script> 
 <script src="{% static 'dashboard/assets/js/dashboard.js' %}"></script>
 
