--- a/templates/base.html
+++ b/templates/base.html
@@ -1,14 +1,13 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-<!-- molla/index-10.html  22 Nov 2019 09:58:04 GMT -->
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Molla - Bootstrap eCommerce Template</title>
+    <title>Flex shoes</title>
     <meta name="keywords" content="HTML5 Template">
-    <meta name="description" content="Molla - Bootstrap eCommerce Template">
+    <meta name="description" content="Flex shoes">
     <meta name="author" content="p-themes">
     <title>{% block title %}{% endblock  %}</title>
     
@@ -18,14 +17,14 @@
 
 
 
-    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'template/assets/images/icons/apple-touch-icon.png' %}">
-    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'template/assets/images/icons/favicon-32x32.png' %}">
-    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'template/assets/images/icons/favicon-16x16.png' %}">
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'template/assets/images/icons/flexgrey2.png' %}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'template/assets/images/icons/flexgrey2.png' %}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'template/assets/images/icons/flexgrey2.png' %}">
     <link rel="manifest" href="{% static 'template/assets/images/icons/site.html' %}">
     <link rel="mask-icon" href="{% static 'template/assets/images/icons/safari-pinned-tab.svg' %}" color="#666666">
-    <link rel="shortcut icon" href="{% static 'template/assets/images/icons/favicon.ico' %}">
-    <meta name="apple-mobile-web-app-title" content="Molla">
-    <meta name="application-name" content="Molla">
+    <link rel="shortcut icon" href="{% static 'template/assets/images/icons/flexgrey3.ico' %}">
+    <meta name="apple-mobile-web-app-title" content="Flex">
+    <meta name="application-name" content="Flex">
     <meta name="msapplication-TileColor" content="#cc9966">
     <meta name="msapplication-config" content="{% static 'template/assets/images/icons/browserconfig.xml' %}">
     <meta name="theme-color" content="#ffffff">
@@ -174,7 +173,7 @@
                         </button>
 
                         <a href="{% url "home" %}" class="logo">
-                            <img src="{% static 'template/assets/images/icons/flex (2).png' %}" alt="Molla Logo" width="105" height="25">
+                            <img src="{% static 'template/assets/images/icons/flex (2).png' %}" alt="Flex Logo" width="105" height="25">
                         </a>
                     </div><!-- End .header-left -->
 
@@ -281,8 +280,8 @@
                                 <h4 class="widget-title">Useful Links</h4><!-- End .widget-title -->
 
                                 <ul class="widget-list">
-                                    <li><a href="#">About Molla</a></li>
-                                    <li><a href="#">How to shop on Molla</a></li>
+                                    <li><a href="#">About Flex</a></li>
+                                    <li><a href="#">How to shop on Flex</a></li>
                                     <li><a href="#">FAQ</a></li>
                                     <li><a href="#">Contact us</a></li>
                                 </ul><!-- End .widget-list -->
