--- a/templates/admin/salesreport.html
+++ b/templates/admin/salesreport.html
@@ -52,6 +52,9 @@
                               <a href="{% url 'generate_pdf' %}" class="btn btn-danger" >
                                 Download PDF <i class="mdi mdi-file-pdf" style="font-size: x-large;"></i>
                               </a>
+                              <a href="{% url 'export_excel' %}" class="btn btn-warning" >
+                                Download Excel <i class="mdi mdi-file-pdf" style="font-size: x-large;"></i>
+                              </a>
                             {% endif %}
                             <div class="table-responsive">
                             <table id="example" class="display nowrap mt-5 table" style="width:100%">
