--- a/templates/user/checkout.html
+++ b/templates/user/checkout.html
@@ -384,15 +384,22 @@
               e.preventDefault();
     
               var fname = $("[name='first_name']").val();
+                print(fname,'nameeeee')
               var phone = $("[name='phone']").val();
+                print(phone,'phoneeeeeeee')
               var email = $("[name='email']").val();
+                print(email,'emailllllllllll')
               var couponOrder = $("[name='couponcheck']").val();
+                print(couponOrder,'couponnnnnnnnnnn')
               var order_note = $("[name='ordernote']").val();
+                print(order_note,'ordernoteeeee')
               var token = $("[name='csrfmiddlewaretoken']").val();
+                print(token,'tokennnnnnnnnnn')
               
               var selectedAddress = $("input[name='address']:checked").val();
+                print(selectedAddress,'addressssssss')
               var paymentMethod = $("a[data-toggle='collapse'][aria-expanded='true']").data('payment-method');
-    
+                print(paymentMethod,'paymentmethodeeeeeeee')
               if (!selectedAddress) {
                   Swal.fire("Alert!", "Address field is mandatory!", "error");
                   console.log('Address field is empty');
@@ -443,7 +450,7 @@
                           console.log(err);
                       });
 
-                      
+
                   } else if (paymentMethod === "cod") {
                     $.ajax({
                         method: "POST",
