invoice_on_checkout_page

--- a/templates/user/checkout.html
+++ b/templates/user/checkout.html
@@ -359,7 +359,8 @@
                                 </div><!-- End .accordion -->
             
                                 <button type="submit"  class="btn btn-outline-primary-2 purchase placeorder " id="orderform"><span> Place Order
-                                   </span><i class="icon-long-arrow-right"></i></button>
+                                   </span><i class="icon-long-arrow-right"></i>
+                                </button>
                             </div><!-- End .summary -->
                         </aside><!-- End .col-lg-3 -->
                         <div class="col-lg-1">
